--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,20 +10,24 @@ jobs:
     name: Release 
     runs-on: ubuntu-latest
     steps:
+
       - uses: actions/checkout@v2
+
       - uses: seanmiddleditch/gha-setup-ninja@master
+
       - name: Build
         run: >
           mkdir build;
           cd build;
           cmake ..
-          -DCMAKE_CXX_COMPILER=clang++-9;
+          -DCMAKE_CXX_COMPILER=clang++;
           cmake --build . --config Release;
           make package;
+
       - name: Upload 
         uses: softprops/action-gh-release@v1
         with:
-          files: build/git-diff-tui-*
+          files: build/git-tui-*
           draft: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
