Fix version number detection.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ if (Git_FOUND)
     OUTPUT_STRIP_TRAILING_WHITESPACE
     )
   string(REGEX REPLACE "v\(.*\)-.*" "\\1" git_tag ${git_tag})
+  string(REGEX REPLACE "v" "" git_tag ${git_tag})
   string(REGEX REPLACE "-" "."  git_tag ${git_tag})
-  message(STATUS ${git_tag})
 else()
   set(git_tag 0)
 endif()
