--- a/.github/workflows/linux-clang.yaml
+++ b/.github/workflows/linux-clang.yaml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - uses: seanmiddleditch/gha-setup-ninja@master
 
