--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,8 +10,9 @@ jobs:
     name: Release 
     runs-on: ubuntu-latest
     steps:
-
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - uses: seanmiddleditch/gha-setup-ninja@master
 
