--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,34 +1,53 @@
 name: Release
 
 on:
-  create:
+  push:
     tags:
-      -v*
+      - "v*"
 
 jobs:
-  build:
-    name: Release 
+  release:
+    name: Release
     runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - uses: seanmiddleditch/gha-setup-ninja@master
-
-      - name: Build
-        run: >
-          mkdir build;
-          cd build;
-          cmake ..
-          -DCMAKE_CXX_COMPILER=clang++;
-          cmake --build . --config Release;
-          make package;
-
-      - name: Upload 
+      - name: Create release
         uses: softprops/action-gh-release@v1
+        id: create_release
         with:
-          files: build/git-tui-*
           draft: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build:
+    name: Build
+    needs: release
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: lukka/get-cmake@latest
+      - uses: lukka/run-cmake@v2
+        with:
+          cmakeListsOrSettingsJson: "CMakeListsTxtBasic"
+          cmakeBuildType: Release
+          buildDirectory: "${{ github.workspace }}/${{ matrix.os }}"
+      - run: |
+          zip --junk-paths "${{ matrix.os }}.zip" "${{ matrix.os }}/git-tui"*
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.release.outputs.upload_url }}
+          asset_path: ${{ matrix.os }}.zip
+          asset_name: git-tui-${{ matrix.os }}
+          asset_content_type: application/octet-stream
