Remove dependency on procxx.
Goal is to support Windows:
See https://github.com/ArthurSonzogni/git-tui/issues/2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(git-tui
   src/scroller.cpp
   src/scroller.hpp
   src/process.hpp
+  src/process.cpp
   )
 
 target_include_directories(git-tui
