Fix release.yaml script

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,20 +16,24 @@ jobs:
         uses: softprops/action-gh-release@v1
         id: create_release
         with:
-          draft: false
+          draft: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build:
     name: Build
     needs: release
-    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
+        include:
+          - os: ubuntu-latest
+            binary: git-tui
+          - os: macos-latest
+            binary: git-tui
+          - os: windows-latest
+            binary: git-tui.exe
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
       - uses: lukka/get-cmake@latest
@@ -38,16 +42,13 @@ jobs:
           cmakeListsOrSettingsJson: "CMakeListsTxtBasic"
           cmakeBuildType: Release
           buildDirectory: "${{ github.workspace }}/${{ matrix.os }}"
-      - run: |
-          zip --junk-paths "${{ matrix.os }}.zip" "${{ matrix.os }}/git-tui"*
 
       - name: Upload Release Asset
-        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ${{ matrix.os }}.zip
-          asset_name: git-tui-${{ matrix.os }}
+          asset_path: "${{ github.workspace }}/${{ matrix.os }}/${{ matrix.binary }}"
+          asset_name: "${{ matrix.os }}"
           asset_content_type: application/octet-stream
