--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -102,7 +102,7 @@ jobs:
           mkdir build;
           cd build;
           cmake ..  -DCMAKE_BUILD_TYPE=Release;
-          cmake --build . --target package;
+          cmake --build . --target package --config Release
       - uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
