--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
         include:
           - name: Linux GCC
             os: ubuntu-latest
-            compiler: g++-9
+            compiler: g++
 
           - name: Linux Clang
             os: ubuntu-latest
